--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/node": "^20.19.30",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.3.27",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
