--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint",
+    "typecheck": "tsc --noEmit",
     "preview": "vite preview"
   },
   "eslintConfig": {
